objects/BillingByQuoteLine__c/BillingByQuoteLine__c.object-meta.xml
<CustomObject>
    <label>Billing by Quote Line</label>
    <nameField>
        <displayFormat>BQL-{0000}</displayFormat>
        <label>Billing by Quote Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billings by Quote Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>