objects/BillingByQuoteLine__c/fields/BillAmount__c.field-meta.xml
<CustomField>
    <fullName>BillAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bill Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>