objects/BillingByQuoteLine__c/fields/BillingSchedule__c.field-meta.xml
<CustomField>
    <fullName>BillingSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Schedule</label>
    <referenceTo>Billing_Schedule__c</referenceTo>
    <relationshipLabel>Billings by Quote Lines</relationshipLabel>
    <relationshipName>BillingsByQuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>