objects/BillingByQuoteLine__c/fields/BillingScheduleOrder__c.field-meta.xml
<CustomField>
    <fullName>BillingScheduleOrder__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <label>Billing Schedule Order</label>
    <length>2</length>
    <type>Text</type>
</CustomField>