objects/BillingByQuoteLine__c/fields/ELV_OrderItem__c.field-meta.xml
<CustomField>
    <fullName>ELV_OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Order Item attached to the billing</description>
    <inlineHelpText>Order Item attached to the billing</inlineHelpText>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Billing By Quote Lines</relationshipLabel>
    <relationshipName>ELV_BillingByQuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>