objects/BillingByQuoteLine__c/fields/ELV_Quote__c.field-meta.xml
<CustomField>
    <fullName>ELV_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quote attached to the billing</description>
    <inlineHelpText>Quote attached to the billing</inlineHelpText>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Billing By Quote Lines</relationshipLabel>
    <relationshipName>ELV_BillingByQuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>