objects/BillingByQuoteLine__c/fields/ELV_QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>ELV_QuoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Billing By Quote Lines</relationshipLabel>
    <relationshipName>ELV_BillingByQuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>