objects/BillingByQuoteLine__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <formula>ELV_QuoteLine__r.Ruby__SubscriptionEndDate__c</formula>
    <label>End Date</label>
    <type>Date</type>
</CustomField>