objects/BillingByQuoteLine__c/fields/isBundledProduct__c.field-meta.xml
<CustomField>
    <fullName>isBundledProduct__c</fullName>
    <formula>ELV_QuoteLine__r.ELV_Bundled_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product is a part of a bundle structure. It is the child aka Bundled Product on Quote Line</inlineHelpText>
    <label>isBundledProduct</label>
    <type>Checkbox</type>
</CustomField>