objects/BillingByQuoteLine__c/fields/isBundleParent__c.field-meta.xml
<CustomField>
    <fullName>isBundleParent__c</fullName>
    <formula>ELV_QuoteLine__r.ELV_Bundle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product is bundle parent</inlineHelpText>
    <label>isBundleParent</label>
    <type>Checkbox</type>
</CustomField>