objects/BillingByQuoteLine__c/fields/isFlatSKU__c.field-meta.xml
<CustomField>
    <fullName>isFlatSKU__c</fullName>
    <formula>NOT(ELV_QuoteLine__r.ELV_Bundle__c) &amp;&amp; NOT(ELV_QuoteLine__r.ELV_Bundled_Product__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>NOT(QuoteLine__r.SBQQ__Bundle__c) &amp;&amp; NOT(QuoteLine__r.Bundled_Product__c)</inlineHelpText>
    <label>isFlatSKU</label>
    <type>Checkbox</type>
</CustomField>