objects/BillingByQuoteLine__c/fields/isMisconfiguredProductBundle__c.field-meta.xml
<CustomField>
    <fullName>isMisconfiguredProductBundle__c</fullName>
    <description>Contact COE for this misconfigured product in the bundle</description>
    <formula>NOT(ISBLANK( TEXT(ELV_QuoteLine__r.ELV_OptionType__c ))) &amp;&amp; NOT(isBundleParent__c) &amp;&amp; NOT ( isBundledProduct__c ) &amp;&amp;  ELV_QuoteLine__r.Ruby__TotalAmount__c &gt; 0</formula>
    <inlineHelpText>Contact COE for this misconfigured product in the bundle</inlineHelpText>
    <label>isMisconfiguredProductBundle</label>
    <type>Checkbox</type>
</CustomField>