objects/BillingByQuoteLine__c/fields/isReverseBilling__c.field-meta.xml
<CustomField>
    <fullName>isReverseBilling__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Reverse Billing was used</inlineHelpText>
    <label>is Reverse Billing</label>
    <type>Checkbox</type>
</CustomField>