objects/BillingByQuoteLine__c/fields/NetTotal__c.field-meta.xml
<CustomField>
    <fullName>NetTotal__c</fullName>
    <description>Net Total on a quoteline product</description>
    <formula>IF( isBundleParent__c ,  QuoteLinePackageTotal__c ,  QuoteLineNetTotal__c )</formula>
    <inlineHelpText>When Bundle Parent, it will be QuoteLinePackageTotal__c on quoteline, else QuoteLineNetTotal__c on quoteline.</inlineHelpText>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>