objects/BillingByQuoteLine__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity attached to the billing</description>
    <inlineHelpText>Opportunity attached to the billing</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Billings by Quote Lines</relationshipLabel>
    <relationshipName>BillingsByQuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>