objects/BillingByQuoteLine__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <description>How the customer plans to pay Tanium</description>
    <inlineHelpText>How the customer plans to pay Tanium</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentType</valueSetName>
    </valueSet>
</CustomField>