objects/BillingByQuoteLine__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>ELV_QuoteLine__r.Product2.Name</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>