objects/BillingByQuoteLine__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quote attached to the billing</description>
    <inlineHelpText>Quote attached to the billing</inlineHelpText>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Billings by Quote Lines</relationshipLabel>
    <relationshipName>BillingsByQuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>