objects/BillingByQuoteLine__c/fields/QuoteLineNetTotal__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineNetTotal__c</fullName>
    <description>Formula - QuoteLine__r.SBQQ__NetTotal__c</description>
    <formula>ELV_QuoteLine__r.Ruby__SellerTotalAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>QuoteLine__r.SBQQ__NetTotal__c</inlineHelpText>
    <label>Quote Line Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>