objects/BillingByQuoteLine__c/fields/QuoteLinePackageTotal__c.field-meta.xml
<CustomField>
    <fullName>QuoteLinePackageTotal__c</fullName>
    <formula>ELV_QuoteLine__r.ELV_PackageTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Bundled product use Package Total instead of Quote Line Net Total</inlineHelpText>
    <label>Quote Line Package Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>