objects/BillingByQuoteLine__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <formula>ELV_QuoteLine__r.Ruby__SubscriptionStartDate__c</formula>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>